pull details from router

--- a/components/Detailsline.module.css
+++ b/components/Detailsline.module.css
@@ -1,5 +1,6 @@
 .Detailsline {
-  height: 60px;
+  min-height: 60px;
+  height: "fit-content";
   display: flex;
   align-items: center;
   justify-content: space-between;
